--- a/app/views/devise/registrations/_pro_form.html.erb
+++ b/app/views/devise/registrations/_pro_form.html.erb
@@ -1,5 +1,8 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
+    
+<!-- Hidden fields in sign up form --> 
+    <%= hidden_field_tag 'plan', params[:plan] %>
 
 <div class="field form-group">
   <%= f.label :email %><br />
@@ -40,6 +43,6 @@
 <!--End Credit Card Information-->
 
 <div class="actions form-group">
-  <%= f.submit "Sign up", class: 'btn btn-primary' %>
+  <%= f.submit "Sign up", class: 'btn btn-primary', id: 'form-submit-btn' %>
 </div>
 <% end %>
