--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -13,3 +13,9 @@ body {
     background:         linear-gradient(90deg, #43cea2 10%, #185a9d 90%); /* W3C */
         
 }
+
+.alert-notice {
+    color: #8a6d3b;
+    background-color: #fcf8e3;
+    border-color: #faebcc;
+}
