--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -8,3 +8,23 @@
     color: white;
     text-align: center;
 }
+.well.profile-description {
+    background-color: #e5e2e2;
+    border-color: #e5e2e2;
+    h3 {
+        margin-top: 0;
+    }
+}
+.well.contact-info {
+    background-color: #e5e2e2;
+    border-color: #e5e2e2;
+        h3 {
+        margin-top: 0;
+    }
+}
+img {
+    border-radius: 50%;
+    -webkit-box-shadow: 0px 10px 5px 0px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow: 0px 10px 5px 0px rgba(50, 50, 50, 0.75);
+    box-shadow: 0px 10px 5px 0px rgba(50, 50, 50, 0.75);
+}
