--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,6 @@
+/******************
+Users Show Page Styles
+******************/
 .job-title-icon {
     display: inline-block;
     width: 30px;
@@ -22,9 +25,17 @@
         margin-top: 0;
     }
 }
-img {
+/******************
+Users Index Page Styles
+******************/
+.user-show-avatar {
     border-radius: 50%;
     -webkit-box-shadow: 0px 10px 5px 0px rgba(50, 50, 50, 0.75);
     -moz-box-shadow: 0px 10px 5px 0px rgba(50, 50, 50, 0.75);
     box-shadow: 0px 10px 5px 0px rgba(50, 50, 50, 0.75);
+    height: 128px;
+    width: 128px;
+}
+.well.white-bg {
+    background-color: white;
 }
