Added content to contact us page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,5 +18,7 @@
             </div>
         <% end %>
         
+        <%= link_to "Edit Your Account", edit_user_registration_path(current_user), class: 'btn btn-danger' %>
+        
     </div>
 </div>
