--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,7 +20,7 @@
         <div class='col-md-6'>
             <div class="well">
                <h2 class="text-center">The Community</h2> 
-               <p>Visit the community to meet other developers, entrepreneurs, and investors.</p>
+               <p class="text-center">Visit the community to meet other developers, entrepreneurs, and investors.</p>
                <%= link_to "Visit The Commmunity", users_path, class: 'btn btn-primary btn-lg btn-block' %>
              </div>
         </div>
@@ -29,7 +29,7 @@
         <div class="col-md-6">
             <div class="well">
                 <h2 class="text-center">Basic Membership</h2>
-                <h4>Sign up for free and get basic access to the community.</h4>
+                <h4 class="text-center">Sign up for free and get basic access to the community.</h4>
                 <br/>
                 <%= link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
             </div>
@@ -38,7 +38,7 @@
         <div class="col-md-6">
             <div class="well">
                 <h2 class="text-center">Pro Membership</h2>
-                <h4>Sign up for the pro account for $10 per month and get access to the community and contact information.</h4>
+                <h4 class="text-center">Sign up for the pro account for $10 per month and get access to the community and contact information.</h4>
                 <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
             </div>
         </div>
