added finishing toughes

--- a/app/views/devise/registrations/_pro_form.html.erb
+++ b/app/views/devise/registrations/_pro_form.html.erb
@@ -43,6 +43,7 @@
 <!--End Credit Card Information-->
 
 <div class="actions form-group">
-  <%= f.submit "Sign up", class: 'btn btn-primary', id: 'form-submit-btn' %>
+  <%= f.submit "Upgrade Now", class: 'btn btn-primary', id: 'form-submit-btn' %></br>
+  </br><p class="text-center">Your credit card will be charged $10 every month. Powered by Stripe.</p>
 </div>
 <% end %>
