--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,13 @@
-<h2 class="text-center">About Us</h2>
-<p class="text-center">Welcome to Dev Match. We are a community of developers, entrepreneurs, and investors who are interested in meeting one another and sharing ideas.</p>
+<div class="jumbotron text-center">
+    <h1 class="text-center">About Our Community</h1>
+</div>
+
+<div class="row">
+    <div class='col-md-6 col-md-offset-3'>
+        <div class="well">
+            <h4 class="text-center">We are a community of developers, entrepreneurs, </br>and investors who are interested in </br> meeting one another and sharing ideas.</h4>
+        </div>
+    </div>
+</div>
+
+
