--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,17 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3 text-center">
     <% if params[:plan] == '2' %>
-      <h1>Pro Account</h1>
-        <p>Sign up for the pro account for $10 per month and get access to the community and contact information.</p>
+      <h1>Upgrade to Pro</h1>
+        <p>Upgrade to the Pro Membership for $10 per month and get access to Community members' professional contact information.</p>
     <% else %>
-      <h1>Basic Account</h1>
-        <p>Sign up for free and get basic access to the community.</p>
+      <h1>Basic Membership</h1>
+        <p>Sign up for free and see developers, entrepreneurs, and developers in your area.</p>
     <% end %>
   </div>
   <div class="col-md-6 col-md-offset-3">
     <div class="well">
       
-      <h2>Sign up</h2>
+      <h3 class="text-center">Take your networking to the next level</h3></br>
       
       <% if params[:plan] == '2' %>
         <%= render "pro_form" %>
