--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,8 +20,9 @@
         <div class='col-md-6'>
             <div class="well">
                <h2 class="text-center">The Community</h2> 
-               <p class="text-center">Visit the community to meet other developers, entrepreneurs, and investors.</p>
+               <p class="text-center">Visit The Community to meet other developers, entrepreneurs, and investors.</p>
                <%= link_to "Visit The Commmunity", users_path, class: 'btn btn-primary btn-lg btn-block' %>
+               </br>
              </div>
         </div>
         
