Added footers, footer content, and jumbotrons to select pages'

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,7 +1,9 @@
+<div class="jumbotron text-center">
+    <h1 class="text-center">Contact us at Dev Match</h1>
+        <h4 class="text-center">Reach out if you have any questions or comments.</h4>
+</div>
 <div class="row">
-    <h1 class ="text-center">Contact us at Dev Match</h1>
     <div class="col-md-4 col-md-offset-4">
-        <p class="text-center">Reach out if you have any questions or comments.</p>
         <div class="well">
             <%= form_for @contact do |f| %>
                 <div class="form-group">
@@ -24,3 +26,9 @@
         </div>
     </div>
 </div>
+<!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <p class="text-muted">Please send me an email if you have any site inquiries or concerns.</p>
+    </div>
+</footer>
