--- a/app/views/devise/registrations/_pro_form.html.erb
+++ b/app/views/devise/registrations/_pro_form.html.erb
@@ -42,8 +42,9 @@
 
 <!--End Credit Card Information-->
 
-<div class="actions form-group">
+<div class="actions form-group text-center">
   <%= f.submit "Upgrade Now", class: 'btn btn-primary', id: 'form-submit-btn' %></br>
-  </br><p class="text-center">Your credit card will be charged $10 every month. Powered by Stripe.</p>
+  </br><p class="text-center">Your credit card will be charged $10 every month.</p>
 </div>
+
 <% end %>
