--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,13 @@
-<div class="row">
-  <div class="col-md-6 col-md-offset-3 text-center">
+<div class="jumbotron text-center">
     <% if params[:plan] == '2' %>
       <h1>Upgrade to Pro</h1>
-        <p>Upgrade to the Pro Membership for $10 per month and get access to Community members' professional contact information.</p>
+        <p>Upgrade to the Pro Membership for $10 per month and get access to </br>Community members' professional contact information.</p>
     <% else %>
       <h1>Basic Membership</h1>
-        <p>Sign up for free and see developers, entrepreneurs, and developers in your area.</p>
+            <h4 class="text-center">Sign up for free and see developers, entrepreneurs, and developers in your area.</h4>
     <% end %>
-  </div>
+</div>
+<div class="row">
   <div class="col-md-6 col-md-offset-3">
     <div class="well">
       
@@ -23,3 +23,9 @@
     </div>
   </div>
 </div>
+<!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <p class="text-muted">Powered by Stripe. </br>Feel free to create your own profile. </br> Or log in with Email: test3@example.com; and Password: 33333333 to demo the Pro Membership, including The Dev Match Community and your personal profile page.</p>
+    </div>
+</footer>
