--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -11,3 +11,9 @@
 </div>
 
 
+<!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <p class="text-muted">Thank you for visiting my website. </br>Please explore all functionality. </br>Additional site information and sample logins are provided in the page footers for your convenience. Use the "Contact Us" page if you have any inquires or concers.</p>
+    </div>
+  </footer>
