--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,3 +22,9 @@
         
     </div>
 </div>
+<!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <p class="text-muted">Feel free to create your own profile. </br>Click the "Edit Your Account" button to view editing abilities. </br>Please do not delete or alter any seed information.</p>
+    </div>
+  </footer>
