--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,6 +4,7 @@
 @import "font-awesome";
 
 
+
 body {
     //Gradient from http://uigradients.com/
     background: -webkit-linear-gradient(90deg, #43cea2 10%, #185a9d 90%); /* Chrome 10+, Saf5.1+ */
@@ -18,4 +19,14 @@ body {
     color: #8a6d3b;
     background-color: #fcf8e3;
     border-color: #faebcc;
+}
+
+.footer {
+    position: relative;
+    margin-bottom: 0;
+    margin-top: 100px;
+    width: 100%;
+    height: 80px;
+    background-color: black;
+    border-radius: 5px;
 }
