--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -45,3 +45,9 @@
         </div>
     <% end %>
 </div>
+<!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <p class="text-muted"><bold>Status: </bold>8 January 2016; Responsive, functional Saas website, including a populated Community, sample user profiles, and Stripe integration.</br>Developed with support from Robeen Dey of Coder Manual.</br>Additional intellectual freedom taken by Brittany Pecenka in design, layout, and concept.</p>
+    </div>
+  </footer>
