Added jumbotron and footer to profile edit page

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -41,3 +41,9 @@
     <%= link_to "Back", :back %>
   </div>
 </div>
+<!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <p class="text-muted">Feel free to create your own profile. </br>Please do not delete or alter any seed information.</p>
+    </div>
+  </footer>
