--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,9 +1,17 @@
+<div class="jumbotron text-center">
+    <h1 class="text-center">Edit Your Profile</h1>
+        <h3 class="text-center">Be a part fo the Dev Match community and fill out your profile!</h3>
+</div>
 <div class="row">
     <div class='col-md-6 col-md-offset-3'>
-        <h1 class="text-center">Edit Your Profile</h1>
-        <p class="text-center">Be a part fo the Dev Match community and fill out your profile!</p>
         <div class="well">
             <%= render 'form' %>
         </div>
     </div>
 </div>
+<!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <p class="text-muted">Feel free to create your own profile. </br>Please do not delete or alter any seed information.</p>
+    </div>
+  </footer>
