Added side panels to login and credit card pages

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,6 +22,13 @@
       <%= render "devise/shared/links" %>
     </div>
   </div>
+  
+  <div class="col-md-3">
+    <div class="well">
+      <h4>Test Credit Card Information</h4>
+        <p><strong>Visa Number</strong> 4242 4242 4242 4242</br><strong>CVC Number</strong> 001</br><strong>Expiration Date</strong> January, 2020</p>
+    </div>
+  </div>
 </div>
 <!-- Footer -->
   <footer class="footer">
